--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -41,7 +41,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="row justify-content-md-around m-1">
             <address>
-              英语等级：四级mayong<br>
+              英语等级：四级<br>
               出生日期：1998-08-22<br>
               出生地：贵州省安顺市关岭县白水镇<br>
 <!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
