--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -70,7 +70,7 @@
           <p>大一从计算机大类专业大二到选择分支专业数字媒体技术直至大四，期间积极参加公益活动</p>
           <div class="row">
             <div class="col-6">
-              <h4>编程思想觉醒</h4>
+              <h4>学习编程</h4>
             </div>
             <div class="col-6">
               <h5 class="text-right"><span aria-hidden="true"></span>2019</h5>
@@ -81,6 +81,7 @@
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
+		<p>熟悉c、c++、python,熟悉pyhton的django框架</p>
           <hr>
           <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">C</div>
@@ -217,6 +218,7 @@
 	-->
       </div>
       <hr>
+      -->
 <!--
       <h2>联系</h2>
       <hr>
