--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -41,7 +41,7 @@
         <div class="col-md-4 col-sm-12">
           <div class="row justify-content-md-around m-1">
             <address>
-              英语等级：四级<br>
+              
               出生日期：1998-08-22<br>
               出生地：贵州省安顺市关岭县白水镇<br>
 <!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
@@ -77,10 +77,11 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">csp之路</span></h5>
-          <p>自从报名csp考试之后，在深夜里看csp和力扣的题目，看懂一个题的代码会莫名的欣喜，自己写代码通过时有着热血沸腾地冲动,考csp200分，在csdn写博客记录下自己的代码。前进、前进、前进</p>
+          <p>有强烈求知欲，看懂一个简单的题的代码会有莫名的欣喜，写代码通过时有着热血沸腾地冲动,考csp200分，在csdn写博客记录下自己的代码。前进、前进、</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
+		<p>英语等级：四级<p>
 		<p>熟悉c、c++、python,熟悉pyhton的django框架</p>
           <hr>
           <div class="progress mt-4">
@@ -216,6 +217,7 @@
           <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="../lifeimages/2020-01.jpg" alt="2020-01"></div>
         </div>
 	-->
+	      <!---
       </div>
       <hr>
       -->
