--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -77,7 +77,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">csp之路</span></h5>
-          <p>有强烈求知欲，看懂一个简单的题的代码会有莫名的欣喜，写代码通过时有着热血沸腾地冲动,考csp200分，在csdn写博客记录下自己的代码。前进、前进、</p>
+          <p>有强烈求知欲，看懂一个简单的题的代码会有莫名的欣喜，写代码通过时有着热血沸腾地冲动！参加csp考试仅有200分，在csdn写博客记录下自己的学习痕迹。前进、前进、</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
