--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 		<link rel="shortcut icon" href="images/logo/logo.ico"/>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
+                        
+			html { 
+				filter: grayscale(100%);
+				filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); 
+				-webkit-filter: grayscale(100%); 
+				-moz-filter: grayscale(100%);
+			}
+			/*灰色渐变*/
 			body {
 				background-color: #000000;
 				margin: 0px;
