--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -36,8 +36,8 @@
               <h5 class="mt-0">学校：贵州大学</h5>
 				<h6 class="mt-0">学院：计算机科学与技术学院</h6>
 				<h6 class="mt-0">专业：数字媒体技术</h6>
-				<h6>自我认知：自信、抗压性良好</h6>
-				<p>意向岗位：后端网站建设、服务业</p>
+				<h6>自我认知：抗压性良好</h6>
+				<p>意向岗位：计算机相关、服务业</p>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">逆水行舟，不进则退</span></h5>
-          <p>保持对知识渴望，有强烈求知欲，参加过csp考试仅有200分，在个人公众号巩固所学的知识(公众号：ymacode），在csdn写博客记录下自己的学习痕迹。</p>
+          <p>保持对知识渴望，有强烈求知欲，参加过csp考试200分，在个人公众号巩固所学的知识(公众号：ymacode），在csdn写博客记录下自己的学习痕迹。</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
