--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
 <div id="declaration1" style="left:520px;" class="declaration">
       <span style="color: #fff;padding:10px 20px;">Stay hungry,Stay modest.</span>
   </div>
-		
+<div id="doc2" style="left:510px;top: 500px;" class="doc">
+		    <a style="" href="https://github.com/yongma16/yongma16_graduation" target="_blank">
+		      <span style="color: #fff;padding:10px 20px;align-items:auto">毕业设计</span>
+		    </a>
+</div>	
 <div id="doc1" style="left:400px;" class="doc">
     <a style="margin-left:5px;" href="introduce/myhome.html" target="_blank">
       <span style="color: #fff;padding:10px 20px;">yma16个人博客</span>
