--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 		      <span style="color: #fff;padding:10px 20px;align-items:auto">毕业设计</span>
 		    </a>
 </div>	
+	
+<div id="doc2" style="left:820px;top: 500px;" class="doc">
+		      <a style="" href="ui_project/demo001/ui_index.html" target="_blank">
+		        <span style="color: #fff;padding:10px 20px;">记录</span>
+		      </a>
+ </div>
+	
 <div id="doc1" style="left:400px;" class="doc">
     <a style="margin-left:5px;" href="introduce/myhome.html" target="_blank">
       <span style="color: #fff;padding:10px 20px;">yma16个人博客</span>
