--- a/ui_project/demo001/ui_index.html
+++ b/ui_project/demo001/ui_index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>UI图片</title>
   <!-- Link CSS -->
-  <link rel="shortcut icon" href="https://github.com/yongma16/yongma16.github.io/images/logo/logo.ico"/>
+  <link rel="shortcut icon" href="https://yongma16.github.io/images/logo/logo.ico"/>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
