--- a/ui_project/demo001/ui_index.html
+++ b/ui_project/demo001/ui_index.html
@@ -511,5 +511,8 @@
 			invert: true
 		});
 	</script>
+		
+	 <div class="copyright" color="FFFF">&copy;2020&<strong>ymacode</strong></div>
+</div>
 </body>
 </html>
