--- a/ui_project/demo001/ui_index.html
+++ b/ui_project/demo001/ui_index.html
@@ -16,7 +16,7 @@
 				<br><br><br>
 				<div class="section-head text-center col-sm-12">
 					<!-- <h4>记录</h4> -->
-					<h2><span class="pink">UI</span></h2>
+					<h2><span class="pink">记录</span></h2>
 					<br><br>
 				</div>
 				<div class="item col-md-4">
@@ -512,7 +512,7 @@
 		});
 	</script>
 		
-	 <div class="copyright" color="FFFF">&copy;2020&<strong>ymacode</strong></div>
+	 <div class="copyright" align="center" color="FFFF">&copy;2020&<strong>ymacode</strong></div>
 </div>
 </body>
 </html>
