--- a/introduce/myhome.html
+++ b/introduce/myhome.html
@@ -49,6 +49,29 @@
 <!--   </section> -->
   <!-- Stats Gallery Section -->
 <!--   <div class="gallery"> -->
+
+	<div class="gallery">
+	  <div class="thumbnail"> <a href="#"><img src="../images/2020pics/毕业照.jpg" alt="毕业照" width="1800" height="1200" class="cards"/></a>
+	    <h4>数媒派的毕业照</h4>
+	    <p class="tag">时光飞逝，四年眨眼就过去，毕业快乐！</p>
+	    <p class="text_column">树莓派的毕业照</p>
+	  </div>
+	  <div class="thumbnail"> <a href="#"><img src="../images/2020pics/驾驶证.jpg" alt="驾驶证" width="1800" height="1200" class="cards"/></a>
+	    <h4>c1驾驶证</h4>
+	    <p class="tag">在黔丰驾校练车，很幸运遇到有趣的朋友和教练</p>
+	    <p class="text_column">驾照一把过</p>
+	  </div>
+	  <div class="thumbnail"> <a href="#"><img src="../images/2020pics/毕业设计.jpg" alt="本科毕业设计" width="1800" height="1200" class="cards"/></a>
+	    <h4>本科毕业设计</h4>
+	    <p class="tag">django展示家居模型的系统，mvc设计模式的使用，orm框架，前端使用bootstrap框架</p>
+	    <p class="text_column">自拟毕业设计</p>
+	  </div>
+	  <div class="thumbnail"> <a href="#"><img src="../images/2020pics/2020年初.jpg" alt="2020过年照片" width="1800" height="1200" class="cards"/></a>
+	    <h4>2020年初</h4>
+	    <p class="tag">持之以恒</p>
+	    <p class="text_column">追梦！</p>
+	  </div>
+	</div>
 	
   <div class="gallery">
     <div class="thumbnail"> <a href="#"><img src="../images/myphotos/2020.jpg" alt="2020" width="1800" height="1200" class="cards"/></a>
