添加的图片
添加的图片

--- a/introduce/my_introduction.html
+++ b/introduce/my_introduction.html
@@ -33,8 +33,11 @@
           <div class="media">
             <img class="mr-3" src="../images/awsl/mayong.jpg" width="96" height="128" alt="mayong graduation image">
             <div class="media-body">
-              <h5 class="mt-0">贵州大学   计算机科学与技术学院  数字媒体技术</h5>
-				<p>个人宣言：Things have a way of working themselves out.</p>
+              <h5 class="mt-0">学校：贵州大学</h5>
+				<h6 class="mt-0">学院：计算机科学与技术学院</h6>
+				<h6 class="mt-0">专业：数字媒体技术</h6>
+				<h6>自我认知：抗压性良好</h6>
+				<p>意向岗位：java后端</p>
             </div>
           </div>
         </div>
@@ -43,8 +46,6 @@
             <address>
               籍贯：贵州<br>
 			  年龄：22岁<br>
-              出生年份：1998年<br>
-              出生地：贵州省安顺市关岭县白水镇<br>
 <!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
 		    电话号码:17685043634<br>
 		    邮箱：ymacode@foxmail.com<br>
@@ -91,15 +92,15 @@
               <h5 class="text-right"><span aria-hidden="true"></span>stay hungry</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">逆水行舟</span></h5>
-          <p>过去有一段岁月颓废过，梦中惊醒这优胜劣汰的机制，现保持对知识渴望，有强烈求知欲，参加csp考试仅有200分，在个人公众号巩固所学的知识（yamcode），在csdn写博客记录下自己的学习痕迹。前进、前进、</p>
+          <h5><span class="badge badge-secondary">逆水行舟，不进则退</span></h5>
+          <p>保持对知识渴望，有强烈求知欲，参加过csp考试200分，在个人公众号巩固所学的知识(公众号：ymacode），在csdn写博客记录下自己的学习痕迹。</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>专业技能</h2>
 			<hr>
 		<p>英语等级：四级<br>
-		熟悉c、c++、python，熟悉pyhton的django框架<br>
-			熟悉语言与后期软件排行榜</p>
+		熟悉c、c++、python、html和数据结构，了解pyhton的django框架和webgl的threejs框架和数据结构，了解git、mysql、javascript、css、unity。
+		熟练运用后期与建模软件</p>
 			          <hr>
           <div class="progress mt-4">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">C</div>
@@ -135,8 +136,46 @@
         </div>
       </div>
 
+	<hr>
+      <h4>学校学习经历</h4>
       <hr>
-      <h4>大学期间的社会实践</h4>
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col-5">
+              <h5>网站建设</h5>
+            </div>
+            <div class="col-6">
+              <h5 class="text-right"><span aria-hidden="true"></span>django框架</h5>
+            </div>
+          </div>
+          <h5><span class="badge badge-secondary">视频网站点播系统</span></h5>
+          <p>django连接mysql搭建的视频网站</p>
+          <ul>
+			  <li>熟悉路由映射机制</li>
+            <li>功能：用户登录注册观看点赞评论收藏视频</li>
+          </ul>
+        </div>
+
+        <div class="col-md-6 col-sm-12">
+          <div class="row">
+            <div class="col-5">
+              <h5>EasyAR小软件</h5>
+            </div>
+            <div class="col-6">
+              <h5 class="text-right"><span aria-hidden="true"></span>unity引擎</h5>
+            </div>
+          </div>
+          <h5><span class="badge badge-secondary">制作简易app</span></h5>
+          <p>模型显示脱卡及粒子系统的使用</p>
+          <ul>
+            <li>制作安卓的小软件</li>
+          </ul>
+        </div>
+      </div>
+		
+      <hr>
+      <h4>社会实践</h4>
       <hr>
       <div class="row">
         <div class="col-md-6 col-sm-12">
@@ -175,7 +214,9 @@
           </ul>
         </div>
       </div>
-		<hr>
+
+<!--		<hr>-->
+<!--
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <div class="row">
@@ -215,12 +256,13 @@
           </ul>
         </div>
       </div>
+-->
 	<hr>
       <h2>近期生活照</h2>
       
       <div class="container">
         <div class="row text-center">
-          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="../lifeimages/2018-05.jpg" alt="2018-05"></div>
+<!--          <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="../lifeimages/2018-05.jpg" alt="2018-05"></div>-->
 	  <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="../lifeimages/2019.jpg" alt="2019"></div>
 	  <!---
           <div class="col-sm-4 col-12 p-0"><img class="img-thumbnail"  src="../lifeimages/2018-11.jpg" alt="2018-11"></div>
