--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 		<link rel="shortcut icon" href="images/logo/logo.ico"/>
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
+                        /*
+			html { 
+				filter: grayscale(100%);
+				filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1); 
+				-webkit-filter: grayscale(100%); 
+				-moz-filter: grayscale(100%);
+			}
+			*/
+			/*灰色渐变*/
 			body {
 				background-color: #000000;
 				margin: 0px;
@@ -84,7 +93,18 @@
 <div id="declaration1" style="left:520px;" class="declaration">
       <span style="color: #fff;padding:10px 20px;">Stay hungry,Stay modest.</span>
   </div>
-		
+<div id="doc2" style="left:510px;top: 500px;" class="doc">
+		    <a style="" href="https://github.com/yongma16/yongma16_graduation" target="_blank">
+		      <span style="color: #fff;padding:10px 20px;align-items:auto">毕业设计</span>
+		    </a>
+</div>	
+	
+<div id="doc2" style="left:820px;top: 500px;" class="doc">
+		      <a style="" href="ui_project/demo001/ui_index.html" target="_blank">
+		        <span style="color: #fff;padding:10px 20px;">记录</span>
+		      </a>
+ </div>
+	
 <div id="doc1" style="left:400px;" class="doc">
     <a style="margin-left:5px;" href="introduce/myhome.html" target="_blank">
       <span style="color: #fff;padding:10px 20px;">yma16个人博客</span>
