--- a/introduce/index.html
+++ b/introduce/index.html
@@ -133,9 +133,9 @@
   
   
   
-<!-- <div id="record" style="left: 50%;"  class="record">
+<div id="record" style="left: 50%;"  class="record">
 <div style="color: dodgerblue;overflow: hidden">&copy;<a href="http://www.beian.miit.gov.cn/" style="text-align: center;color: cornflowerblue" >黔ICP备20001426号</a></div>
-    </div> -->
+    </div>
 
 		<script src="three-master/three.js"></script>
 
