--- a/introduce/uimy_introduction_ui.html
+++ b/introduce/uimy_introduction_ui.html
@@ -31,13 +31,14 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="media">
-            <img class="mr-3" src="../images/awsl/mayong.jpg" width="96" height="128" alt="mayong graduation image">
+            <img class="mr-3" src="../images/awsl/测试.jpg" width="96" height="128" alt="mayong graduation image">
             <div class="media-body">
               <h5 class="mt-0">学校：贵州大学</h5>
 				<h6 class="mt-0">学院：计算机科学与技术学院</h6>
 				<h6 class="mt-0">专业：数字媒体技术</h6>
-				<h6>自我认知：抗压性良好</h6>
-				<p>意向岗位：ui设计、前端</p>
+				<h6>意向岗位：ui设计、前端</h6>
+				<h6>期望新资：5k-6.5k</h6>
+				
             </div>
           </div>
         </div>
@@ -47,10 +48,10 @@
               籍贯：贵州<br>
 			  年龄：22岁<br>
 <!--               <abbr title="Phone">电话号码:</abbr> 17685043634<br> -->
-		    电话号码:17685043634<br>
+		    电话：17685043634<br>
 		    邮箱：ymacode@foxmail.com<br>
 <!--               <abbr title="mail">邮箱：1432448610@qq.com</abbr><br> -->
-	      个人主页：<a href="https://yongma16.github.io/">https://yongma16.github.io/</a>
+	      主页：<a href="http://yongma16.xyz/">http://yongma16.xyz/</a>
             </address>
           </div>
         </div>
@@ -94,7 +95,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">逆水行舟，不进则退</span></h5>
-          <p>保持对知识渴望，有强烈求知欲，参加过计算机学会举办的csp考试200分（排名前20%），在个人公众号巩固所学的知识(公众号：ymacode），在csdn写博客记录下自己的学习痕迹。</p>
+          <p>保持对知识渴望，有强烈求知欲，参加过计算机学会举办的csp考试200分（排名前30%），在个人公众号巩固所学的知识(公众号：ymacode），在csdn写博客记录下自己的学习痕迹。</p>
         </div>
 		
         <div class="col-md-6 col-sm-12">
@@ -107,11 +108,14 @@
 		了解pyhton的django框架和webgl的threejs框架和数据结构，
 		了解git、mysql、javascript、css、unity，
 		基本掌握adobe软件使用，使用ps和ai设计过一下图标logo</p>
+		<div class="progress mt-4">
+		    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 88%">dw</div>
+		  </div>
         <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 88%">maya</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width: 88%">maya</div>
           </div>
 		  <div class="progress mt-4">
-		      <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">ps</div>
+		      <div class="progress-bar bg-success" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 85%">ps</div>
 		    </div>
           <div class="progress mt-4">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">ai</div>
@@ -152,10 +156,10 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">logo图标</span></h5>
-          <p>跟着哔哩哔哩教程学习</p>
+          <p>图标模仿学习</p>
           <ul>
             <li>练习的矢量图标已上传到阿里图标库</li>
-
+			<li><a href="https://www.iconfont.cn/manage/index?spm=a313x.7781069.1998910419.10&manage_type=myicons&icontype=collections&keyword=">图标库链接</a></li>
           </ul>
         </div>
       </div>
