feat: update html

--- a/test/join_court/index.html
+++ b/test/join_court/index.html
@@ -18034,7 +18034,7 @@
                 </section>
                 <iframe
                   src="https://form.smartlink.intlgame.com/stunlock_join_court?unique_code=bmXWWUjV"
-                  style="width: 100vw;height: 100vh;outline: transparent;border:none"
+                  style="width: 100%;height: 100vh;outline: transparent;border:none"
                 ></iframe>
                 <section
                   class="section featured-text"
