--- a/test/newsletter/index.html
+++ b/test/newsletter/index.html
@@ -5991,7 +5991,7 @@
                             <section class="section standard-content pt-20">
                                 <div class="content">
                                     <div class="content html-snippet">
-                                        <iframe src="https://form.smartlink.intlgame.com/stunlock?unique_code=bmXWWUjV" frameborder="0" scrolling="auto" allowfullscreen style="width: 100%; height: 100vh; border: none;">
+                                        <iframe src="https://form.smartlink.intlgame.com/stunlock?unique_code=bmXWWUjV" frameborder="0" scrolling="auto" allowfullscreen style="width: 100%; height: 100vh; border: none;margin-bottom:150px">
                                             </iframe>
                                     </div>
                                 </div>
