feat: update html  params

--- a/test/sign_up/index.html
+++ b/test/sign_up/index.html
@@ -17225,7 +17225,7 @@
         [334],
         { "_uid": 335, "snippet": 336, "component": 337 },
         "i-07c11d2f-b312-4307-b8a1-abdbeea8ad7e",
-        "  \u003Ciframe  src=\"https://form.smartlink.intlgame.com/stunlock_sign_up?unique_code=bmXWWUjV\"\n        frameborder=\"0\"\n        scrolling=\"auto\"\n        allowfullscreen\n        style=\"width: 100%; height: 100vh; border: none;\"\n      >\u003C/iframe>",
+        "  \u003Ciframe  src=\"https://form.smartlink.intlgame.com/stunlock_sign_up?unique_code=er7WWS8Z\"\n        frameborder=\"0\"\n        scrolling=\"auto\"\n        allowfullscreen\n        style=\"width: 100%; height: 100vh; border: none;\"\n      >\u003C/iframe>",
         "htmlSnippet",
         "standardContent",
         "page",
